[tool.poetry]
name = "networking"
version = "2023.0b"
description = "Assignments for networking course"
authors = ["Nikita Sychev <root@nsychev.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
quirck = {path = "quirck", develop = true}
netaddr = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
