[project]
name = "networking"
version = "2026.1"
description = "Assignments for networking course"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "netaddr>=1.3.0",
    "quirck",
]

[tool.uv.sources]
quirck = { path = "./quirck", editable = true }

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.uv.build-backend]
module-name = "networking"
module-root = ""
