[package]
name = "dns"
version = "2023.0.0"
edition = "2021"

[dependencies]
async-std = {version = "^1.12.0", features = ["attributes", "tokio1"]}
async-trait = "^0.1.68"
env_logger = "^0.10.0"
hyper = "^0.14.26"
hyperlocal = "^0.8.0"
log = "^0.4.17"
tokio = { version = "^1.28.0", features = ["full"] }
trust-dns-client = { version = "^0.22.0", default-features = false }
