[package]
name = "dns"
version = "2026.0.0"
edition = "2024"

[dependencies]
async-trait = "^0.1.89"
env_logger = "^0.11.9"
log = "^0.4.29"
reqwest = { version = "^0.13", features = ["charset"], default-features = false }
tokio = { version = "^1.50.0", features = ["macros", "rt-multi-thread", "net"] }
hickory-client = { version = "0.25.2" }
