[package]
name = "ping"
version = "2023.0.0"
edition = "2021"

[dependencies]
async-std = {version = "^1.11.0", features = ["attributes", "tokio1"]}
env_logger = "0.8.2"
futures = "^0.3"
hyper = "^0.14.18"
hyperlocal = "^0.8.0"
log = "^0.4.17"
pnet = "^0.29.0"
tokio = { version = "1", features = ["full"] }
